<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/containerPerson"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="match_parent">

    <com.example.learnanything.widget.CustomToolBar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/edtAge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAge" />

</androidx.constraintlayout.widget.ConstraintLayout>